--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -102,7 +102,7 @@ $\val=\{|a| \mid \forall a\in A,\nom(a)=1\}$\\ \hline
 %    val nonHumanNumAttsNames = "\"#classes\",\"#atributos\",\"#exemplos\"," +
 %       "\"#exemplos/#atributos\",\"%nominais\",\"log(#exs)\",\"log(#exs/#atrs)\"," +
 
-metafeat = correl spearm entre queries de: Clu, Ageucl, Agmanh e Agmaha
+metafeat = correl spearm entre queries de: Ageucl, Agmanh e Agmaha
 
 c45    5nn   maj
 3buds
@@ -143,12 +143,6 @@ para uma dada estratégia}
 
 \tar{metaap pra decidir entre AG, LU ou TU}
 
-\tar{carac. dos classifs como metafeature:
-\begin{itemize}
- \item sharp ou soft (alternativa: entropia média das predições)
-\end{itemize}
-}
-
 \ano{sucesso garantido: recomendar strat por tempo de consulta estimado.
 seria muito óbvio?}
 
@@ -180,10 +174,6 @@ mas como as faixas ideais são imprevisíveis, resolvi isso colocando max, min, av
 Posso colocar ou omitir a informação de distribuição das classes; ela normalmente não
 é conhecida na prática.
 
-\esb{Dar a ideia de que uma meta-feature N interessante seriaa qtdade inicial de exemplos.
-Se eu chegasse a implementar, ajudaria DW e também ajuda ClusterBased, cuja implementação não aproveita os rótulos iniciais (e pode dispensar a etapa inicial).
-Porém, qto maios exemplos, mais as estratégias se aproximam de Random Sampling.}
-
 \section{Meta-estratégia}
 
 \ano{vai que o tempo de phd se multiplica:
@@ -193,7 +183,6 @@ testar com outros meta-classificadores; Meta-estratégia dinâmica}
 \ano{citar programa R para a extração de parte dos meta-atributos \citep{team2010r}}
 
 \section{Considerações}
-liga com próximo capítulo apontando para as propostas de estratégias e de metaap.;
-resumir o motivo da proposta
+
 
 
