--- a/macros.tex
+++ b/macros.tex
@@ -26,6 +26,9 @@
 \newcommand{\elms}{\textit{máquinas extremas}\xspace}
 \newcommand{\elm}{\textit{máquina extrema}\xspace}
 \newcommand{\svm}{máquina de vetores de suporte\xspace}
+\newcommand{\bom}[1]{\textcolor{blue}{\textbf{#1}}\xspace}
+\newcommand{\bomd}[1]{\textbf{#1}\xspace}
+\newcommand{\ruim}[1]{\textcolor{red}{\textbf{#1}}\xspace}
 
 \newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\tar{#1}}}
 
