--- a/arvorebestperd.tex
+++ b/arvorebestperd.tex
@@ -23,7 +23,7 @@ level 2/.style={text width=2cm, font=\footnotesize, level distance=2.8cm,sibling
 % level 5/.style={text width=2cm, font=\footnotesize, level distance=2.85cm,sibling angle=45},
 ]
 \input treeBesttrue
-\label{treeBest}
+\label{treeBestdesf}
 \end{tikzpicture}
 \end{center}
 \end{figure}
