--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1697,3 +1697,66 @@ keywords = "Meta-learning systems "
     volume = {10},
     year = {1985}
  }
+
+@Article{journals/ijhis/KandaCHS11,
+  title =       "Selection of algorithms to solve traveling salesman
+                 problems using meta-learning",
+  author =      "Jorge Kanda and Andr{\'e} Carlos Ponce Leon Ferreira
+                 de Carvalho and Eduardo R. Hruschka and Carlos Soares",
+  journal =     "Int. J. Hybrid Intell. Syst",
+  year =        "2011",
+  number =      "3",
+  volume =      "8",
+  bibdate =     "2011-07-12",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijhis/ijhis8.html#KandaCHS11",
+  pages =       "117--128",
+  URL =         "http://dx.doi.org/10.3233/HIS-2011-0133",
+}
+
+@Article{journals/ijon/RossiCSS14,
+  title =       "MetaStream: {A} meta-learning based method for
+                 periodic algorithm selection in time-changing data",
+  author =      "Andr{\'e} Luis Debiaso Rossi and Andr{\'e} Carlos
+                 Ponce de Leon Ferreira de Carvalho and Carlos Soares
+                 and Bruno Feres de Souza",
+  journal =     "Neurocomputing",
+  year =        "2014",
+  volume =      "127",
+  bibdate =     "2014-01-07",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijon/ijon127.html#RossiCSS14",
+  pages =       "52--64",
+  URL =         "http://dx.doi.org/10.1016/j.neucom.2013.05.048",
+}
+
+@InProceedings{conf/iberamia/SouzaCS10,
+  title =       "Empirical Evaluation of Ranking Prediction Methods for
+                 Gene Expression Data Classification",
+  author =      "Bruno Feres de Souza and Andr{\'e} Carlos Ponce Leon
+                 Ferreira de Carvalho and Carlos Soares",
+  bibdate =     "2010-11-06",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/iberamia/iberamia2010.html#SouzaCS10",
+  booktitle =   "IBERAMIA",
+  booktitle =   "Advances in Artificial Intelligence - {IBERAMIA} 2010,
+                 12th Ibero-American Conference on {AI}, Bah{\'i}a
+                 Blanca, Argentina, November 1-5, 2010. Proceedings",
+  publisher =   "Springer",
+  year =        "2010",
+  volume =      "6433",
+  editor =      "{\'A}ngel Fernando Kuri Morales and Guillermo Ricardo
+                 Simari",
+  ISBN =        "978-3-642-16951-9",
+  pages =       "194--203",
+  series =      "Lecture Notes in Computer Science",
+  URL =         "http://dx.doi.org/10.1007/978-3-642-16952-6",
+}
+
+@article{Garcia2015,
+title = {Noise detection in the meta-learning level.},
+author = {Lu{\'i}s Paulo F. Garcia and Andr{\'e} C. P. F. de Carvalho and Ana C. Lorena},
+year = {2015},
+journal = {Neurocomputing},
+note = {in press 2015},
+}
