--- a/treefalse.tex
+++ b/treefalse.tex
@@ -1,33 +1,7 @@
 \node[line width=0.3ex, decision] {algoritmo}
-child {node [decision] {\%nominais}
-child {node [decision] {\#atributos}
-child {node [decision] {\#exemplos}
-child {node [outcome] {Rnd \\$19$: $21\%$} edge from parent node [cond] {$\leq1078$}}
-child {node [outcome] {\textbf{HTUmah} \\$12$: $50\%$} edge from parent node [cond] {$>1078$}}edge from parent node [cond] {$\leq6$}}
-child {node [decision] {\#classes}
-child {node [decision] {\%minor.}
-child {node [outcome] {\textbf{ATUmah} \\$32$: $34\%$} edge from parent node [cond] {$\leq30$}}
-child {node [outcome] {EERent \\$24$: $58\%$} edge from parent node [cond] {$>30$}}edge from parent node [cond] {$\leq5$}}
-child {node [outcome] {TUmah \\$18$: $33\%$} edge from parent node [cond] {$>5$}}edge from parent node [cond] {$>6$}}edge from parent node [cond] {$\leq77$}}
-child {node [outcome] {Mar \\$12$: $42\%$} edge from parent node [cond] {$>77$}}edge from parent node [cond] {5NN}}
-child {node [decision] {\#classes}
-child {node [outcome] {EERent \\$78$: $36\%$} edge from parent node [cond] {$\leq5$}}
-child {node [outcome] {TUmah \\$17$: $35\%$} edge from parent node [cond] {$>5$}}edge from parent node [cond] {C4.5w}}
-child {node [decision] {$\frac{\%major.}{\%minor.}$}
-child {node [decision] {\#atributos}
-child {node [outcome] {Mar \\$17$: $47\%$} edge from parent node [cond] {$\leq6$}}
-child {node [outcome] {TUmah \\$70$: $49\%$} edge from parent node [cond] {$>6$}}edge from parent node [cond] {$\leq14$}}
-child {node [outcome] {Mar \\$13$: $46\%$} edge from parent node [cond] {$>14$}}edge from parent node [cond] {CIELM}}
-child {node [decision] {\%nominais}
-child {node [outcome] {EERent \\$74$: $39\%$} edge from parent node [cond] {$\leq13$}}
-child {node [outcome] {Mar \\$21$: $38\%$} edge from parent node [cond] {$>13$}}edge from parent node [cond] {NB}}
-child {node [decision] {\#atributos}
-child {node [outcome] {TUmah \\$16$: $44\%$} edge from parent node [cond] {$\leq5$}}
-child {node [decision] {\%minor.}
-child {node [outcome] {TUmah \\$53$: $70\%$} edge from parent node [cond] {$\leq34$}}
-child {node [outcome] {Mar \\$25$: $48\%$} edge from parent node [cond] {$>34$}}edge from parent node [cond] {$>5$}}edge from parent node [cond] {RFw}}
-child {node [decision] {\#exemplos}
-child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
-child {node [outcome] {EERent \\$19$: $42\%$} edge from parent node [cond] {$\leq17$}}
-child {node [outcome] {SVMsim \\$12$: $67\%$} edge from parent node [cond] {$>17$}}edge from parent node [cond] {$\leq273$}}
-child {node [outcome] {EERent \\$63$: $35\%$} edge from parent node [cond] {$>273$}}edge from parent node [cond] {SVM}};
+child {node [outcome] {EERent \\$117$: $24\%$} edge from parent node [cond] {5NN}}
+child {node [outcome] {EERent \\$95$: $29\%$} edge from parent node [cond] {C4.5w}}
+child {node [outcome] {TUmah \\$100$: $41\%$} edge from parent node [cond] {CIELM}}
+child {node [outcome] {EERent \\$95$: $35\%$} edge from parent node [cond] {NB}}
+child {node [outcome] {TUmah \\$84$: $51\%$} edge from parent node [cond] {RFw}}
+child {node [outcome] {EERent \\$87$: $36\%$} edge from parent node [cond] {SVM}};
