--- a/arvoreperd.tex
+++ b/arvoreperd.tex
@@ -21,7 +21,7 @@ level 4/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling
 level 5/.style={text width=2cm, font=\footnotesize, level distance=2.85cm,sibling angle=45},
 ]
 \input treetrue
-\label{tree}
+\label{treedesf}
 \end{tikzpicture}
 \end{center}
 \end{figure}
