--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -1,109 +1,110 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 1-abalone 3class &   0.58 &   0.62 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} &   0.58 &   0.64 &   0.65 & \textcolor{red}{\textbf{  0.57}} \\
-2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.68 &   0.72 & \textcolor{red}{\textbf{  0.66}} &   0.67 &   0.82 & \textcolor{black}{\textbf{  0.85}} &   0.68 \\
-3-artificial charact... &   0.55 &   0.56 &   0.50 & \underline{\textcolor{blue}{\textbf{  0.61}}} &   0.40 & \textcolor{black}{\textbf{  0.58}} &   0.56 & \textcolor{red}{\textbf{  0.29}} \\
-4-autoUniv au1 1000 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.66}}} &   0.55 &   0.54 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.62}} &   0.60 & \textcolor{red}{\textbf{  0.50}} \\
-5-autoUniv au7 300 d... &   0.31 & \textcolor{black}{\textbf{  0.38}} &   0.33 &   0.32 & \textcolor{red}{\textbf{  0.30}} & \underline{\textcolor{blue}{\textbf{  0.40}}} &   0.35 &   0.33 \\ \hline
-6-autoUniv au7 700 & \textcolor{red}{\textbf{  0.36}} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.42 &   0.48 & \textcolor{blue}{\textbf{  0.51}} &   0.44 &   0.43 \\
-7-balance scale &   0.60 &   0.57 &   0.64 & \textcolor{black}{\textbf{  0.66}} & \textcolor{red}{\textbf{  0.54}} &   0.59 & \underline{\textcolor{blue}{\textbf{  0.75}}} &   0.65 \\
-8-banana &   0.87 &   0.88 &   0.79 & \textcolor{red}{\textbf{  0.70}} & \textcolor{red}{\textbf{  0.70}} & \textcolor{black}{\textbf{  0.89}} & \underline{\textcolor{blue}{\textbf{  0.90}}} &   0.71 \\
-9-banknote authentic... & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.99 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.93}} &   0.99 & \textcolor{blue}{\textbf{  1.00}} &   0.96 \\
-10-bupa &   0.61 &   0.62 &   0.67 &   0.67 & \textcolor{red}{\textbf{  0.52}} & \underline{\textcolor{blue}{\textbf{  0.70}}} & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{  0.52}} \\ \hline
-11-car evaluation &   0.71 &   0.61 &   0.61 &   0.63 & \textcolor{red}{\textbf{  0.58}} & \textcolor{black}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.96}}} & \textcolor{red}{\textbf{  0.58}} \\
-12-cardiotocography 1... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\
-13-cardiotocography 3... & \textcolor{blue}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  0.98}} &   0.96 & \textcolor{blue}{\textbf{  0.98}} & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.98}} &   0.97 & \textcolor{red}{\textbf{  0.88}} \\
-14-climate simulation... &   0.55 & \textcolor{black}{\textbf{  0.62}} &   0.51 &   0.53 & \underline{\textcolor{blue}{\textbf{  0.71}}} &   0.51 &   0.52 & \textcolor{red}{\textbf{  0.50}} \\
-15-connect. mines vs... & \underline{\textcolor{blue}{\textbf{  0.85}}} &   0.75 &   0.77 & \textcolor{red}{\textbf{  0.69}} &   0.75 &   0.82 & \textcolor{black}{\textbf{  0.84}} &   0.70 \\ \hline
-16-connect. vowel red... & \underline{\textcolor{blue}{\textbf{  0.99}}} & \textcolor{red}{\textbf{  0.59}} &   0.72 &   0.92 &   0.61 & \textcolor{black}{\textbf{  0.95}} &   0.93 &   0.65 \\
-17-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.66 &   0.75 &   0.94 & \textcolor{red}{\textbf{  0.62}} & \textcolor{black}{\textbf{  0.96}} &   0.95 &   0.65 \\
-18-dbworld subjects &   0.79 &   0.83 &   0.65 & \textcolor{red}{\textbf{  0.51}} & \textcolor{black}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.72 & \textcolor{black}{\textbf{  0.84}} \\
-19-first order theore... & \textcolor{black}{\textbf{  0.44}} &   0.39 &   0.39 &   0.36 &   0.36 & \underline{\textcolor{blue}{\textbf{  0.47}}} &   0.34 & \textcolor{red}{\textbf{  0.17}} \\
-20-flare &   0.58 &   0.59 & \textcolor{blue}{\textbf{  0.61}} &   0.60 & \textcolor{blue}{\textbf{  0.61}} &   0.60 &   0.60 & \textcolor{red}{\textbf{  0.38}} \\ \hline
-21-glass &   0.65 & \textcolor{black}{\textbf{  0.66}} &   0.55 &   0.50 &   0.65 & \underline{\textcolor{blue}{\textbf{  0.75}}} &   0.61 & \textcolor{red}{\textbf{  0.45}} \\
-22-habermans survival &   0.55 & \textcolor{black}{\textbf{  0.57}} & \underline{\textcolor{blue}{\textbf{  0.58}}} & \textcolor{black}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.53}} & \textcolor{black}{\textbf{  0.57}} &   0.54 &   0.55 \\
-23-heart disease clev... & \underline{\textcolor{blue}{\textbf{  0.35}}} &   0.31 &   0.31 &   0.31 & \textcolor{black}{\textbf{  0.34}} &   0.33 &   0.30 & \textcolor{red}{\textbf{  0.23}} \\
-24-heart disease hung... & \textcolor{red}{\textbf{  0.74}} &   0.76 &   0.78 &   0.78 & \textcolor{blue}{\textbf{  0.81}} &   0.80 &   0.79 & \textcolor{blue}{\textbf{  0.81}} \\
-25-hepatitis &   0.68 & \textcolor{red}{\textbf{  0.62}} & \textcolor{blue}{\textbf{  0.78}} &   0.74 & \textcolor{blue}{\textbf{  0.78}} &   0.70 &   0.73 &   0.75 \\ \hline
-26-hill valley withou... &   0.64 &   0.50 & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.69}}} &   0.50 &   0.61 & \textcolor{red}{\textbf{  0.49}} &   0.50 \\
-27-horse colic surgic... &   0.74 & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 &   0.75 &   0.81 & \textcolor{black}{\textbf{  0.83}} &   0.80 & \textcolor{red}{\textbf{  0.54}} \\
-28-indian liver patie... & \textcolor{black}{\textbf{  0.58}} &   0.57 &   0.55 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{black}{\textbf{  0.58}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
-29-ionosphere &   0.83 &   0.88 &   0.83 & \textcolor{red}{\textbf{  0.81}} &   0.87 & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.94}}} &   0.86 \\
-30-iris & \textcolor{blue}{\textbf{  0.96}} &   0.93 & \textcolor{red}{\textbf{  0.92}} & \textcolor{blue}{\textbf{  0.96}} &   0.94 &   0.95 & \textcolor{blue}{\textbf{  0.96}} &   0.95 \\ \hline
-31-kr vs kp &   0.95 & \textcolor{blue}{\textbf{  0.99}} &   0.95 &   0.95 & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.99}} &   0.98 &   0.94 \\
-32-leaf &   0.60 & \textcolor{red}{\textbf{  0.47}} &   0.67 & \textcolor{black}{\textbf{  0.69}} &   0.61 & \underline{\textcolor{blue}{\textbf{  0.76}}} &   0.61 & \textcolor{black}{\textbf{  0.69}} \\
-33-leukemia haslinger &   0.81 & \textcolor{red}{\textbf{  0.74}} &   0.84 &   0.79 &   0.86 &   0.86 & \underline{\textcolor{blue}{\textbf{  0.90}}} & \textcolor{black}{\textbf{  0.88}} \\\end{tabular}\label{tab:balaccClassif0}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM\\ \hline 1-abalone 3class & \textcolor{red}{\textbf{  0.58}} &   0.62 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} & \textcolor{red}{\textbf{  0.58}} &   0.64 &   0.65 \\
+2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.68 &   0.72 & \textcolor{red}{\textbf{  0.66}} &   0.67 &   0.82 & \textcolor{black}{\textbf{  0.85}} \\
+3-artificial charact... &   0.55 &   0.56 &   0.50 & \underline{\textcolor{blue}{\textbf{  0.61}}} & \textcolor{red}{\textbf{  0.40}} & \textcolor{black}{\textbf{  0.58}} &   0.56 \\
+4-autoUniv au1 1000 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.66}}} &   0.55 &   0.54 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.62}} &   0.60 \\
+5-autoUniv au7 300 d... &   0.31 & \textcolor{black}{\textbf{  0.38}} &   0.33 &   0.32 & \textcolor{red}{\textbf{  0.30}} & \underline{\textcolor{blue}{\textbf{  0.40}}} &   0.35 \\ \hline
+6-autoUniv au7 700 & \textcolor{red}{\textbf{  0.36}} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.42 &   0.48 & \textcolor{blue}{\textbf{  0.51}} &   0.44 \\
+7-balance scale &   0.60 &   0.57 &   0.64 & \textcolor{black}{\textbf{  0.66}} & \textcolor{red}{\textbf{  0.54}} &   0.59 & \underline{\textcolor{blue}{\textbf{  0.75}}} \\
+8-banana &   0.87 &   0.88 &   0.79 & \textcolor{red}{\textbf{  0.70}} & \textcolor{red}{\textbf{  0.70}} & \textcolor{black}{\textbf{  0.89}} & \underline{\textcolor{blue}{\textbf{  0.90}}} \\
+9-banknote authentic... & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.99 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.93}} &   0.99 & \textcolor{blue}{\textbf{  1.00}} \\
+10-bupa &   0.61 &   0.62 &   0.67 &   0.67 & \textcolor{red}{\textbf{  0.52}} & \underline{\textcolor{blue}{\textbf{  0.70}}} & \textcolor{black}{\textbf{  0.68}} \\ \hline
+11-car evaluation &   0.71 &   0.61 &   0.61 &   0.63 & \textcolor{red}{\textbf{  0.58}} & \textcolor{black}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.96}}} \\
+12-cardiotocography 1... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\
+13-cardiotocography 3... & \textcolor{blue}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  0.98}} &   0.96 & \textcolor{blue}{\textbf{  0.98}} & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.98}} &   0.97 \\
+14-climate simulation... &   0.55 & \textcolor{black}{\textbf{  0.62}} & \textcolor{red}{\textbf{  0.51}} &   0.53 & \underline{\textcolor{blue}{\textbf{  0.71}}} & \textcolor{red}{\textbf{  0.51}} &   0.52 \\
+15-connect. mines vs... & \underline{\textcolor{blue}{\textbf{  0.85}}} &   0.75 &   0.77 & \textcolor{red}{\textbf{  0.69}} &   0.75 &   0.82 & \textcolor{black}{\textbf{  0.84}} \\ \hline
+16-connect. vowel red... & \underline{\textcolor{blue}{\textbf{  0.99}}} & \textcolor{red}{\textbf{  0.59}} &   0.72 &   0.92 &   0.61 & \textcolor{black}{\textbf{  0.95}} &   0.93 \\
+17-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.66 &   0.75 &   0.94 & \textcolor{red}{\textbf{  0.62}} & \textcolor{black}{\textbf{  0.96}} &   0.95 \\
+18-dbworld subjects &   0.79 &   0.83 &   0.65 & \textcolor{red}{\textbf{  0.51}} & \textcolor{black}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.72 \\
+19-first order theore... & \textcolor{black}{\textbf{  0.44}} &   0.39 &   0.39 &   0.36 &   0.36 & \underline{\textcolor{blue}{\textbf{  0.47}}} & \textcolor{red}{\textbf{  0.34}} \\
+20-flare & \textcolor{red}{\textbf{  0.58}} &   0.59 & \textcolor{blue}{\textbf{  0.61}} &   0.60 & \textcolor{blue}{\textbf{  0.61}} &   0.60 &   0.60 \\ \hline
+21-glass &   0.65 & \textcolor{black}{\textbf{  0.66}} &   0.55 & \textcolor{red}{\textbf{  0.50}} &   0.65 & \underline{\textcolor{blue}{\textbf{  0.75}}} &   0.61 \\
+22-habermans survival &   0.55 & \textcolor{black}{\textbf{  0.57}} & \underline{\textcolor{blue}{\textbf{  0.58}}} & \textcolor{black}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.53}} & \textcolor{black}{\textbf{  0.57}} &   0.54 \\
+23-heart disease clev... & \underline{\textcolor{blue}{\textbf{  0.35}}} &   0.31 &   0.31 &   0.31 & \textcolor{black}{\textbf{  0.34}} &   0.33 & \textcolor{red}{\textbf{  0.30}} \\
+24-heart disease hung... & \textcolor{red}{\textbf{  0.74}} &   0.76 &   0.78 &   0.78 & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{black}{\textbf{  0.80}} &   0.79 \\
+25-hepatitis &   0.68 & \textcolor{red}{\textbf{  0.62}} & \textcolor{blue}{\textbf{  0.78}} &   0.74 & \textcolor{blue}{\textbf{  0.78}} &   0.70 &   0.73 \\ \hline
+26-hill valley withou... &   0.64 &   0.50 & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.69}}} &   0.50 &   0.61 & \textcolor{red}{\textbf{  0.49}} \\
+27-horse colic surgic... & \textcolor{red}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 &   0.75 &   0.81 & \textcolor{black}{\textbf{  0.83}} &   0.80 \\
+28-indian liver patie... & \textcolor{black}{\textbf{  0.58}} &   0.57 &   0.55 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{black}{\textbf{  0.58}} & \textcolor{red}{\textbf{  0.50}} \\
+29-ionosphere &   0.83 &   0.88 &   0.83 & \textcolor{red}{\textbf{  0.81}} &   0.87 & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.94}}} \\
+30-iris & \textcolor{blue}{\textbf{  0.96}} &   0.93 & \textcolor{red}{\textbf{  0.92}} & \textcolor{blue}{\textbf{  0.96}} &   0.94 &   0.95 & \textcolor{blue}{\textbf{  0.96}} \\ \hline
+31-kr vs kp &   0.95 & \textcolor{blue}{\textbf{  0.99}} &   0.95 &   0.95 & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.99}} &   0.98 \\
+32-leaf &   0.60 & \textcolor{red}{\textbf{  0.47}} &   0.67 & \textcolor{black}{\textbf{  0.69}} &   0.61 & \underline{\textcolor{blue}{\textbf{  0.76}}} &   0.61 \\
+33-leukemia haslinger &   0.81 & \textcolor{red}{\textbf{  0.74}} &   0.84 &   0.79 & \textcolor{black}{\textbf{  0.86}} & \textcolor{black}{\textbf{  0.86}} & \underline{\textcolor{blue}{\textbf{  0.90}}} \\\end{tabular}\label{tab:balaccClassif0}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 &   0.81 &   0.80 \\
-35-mfeat fourier &   0.80 & \textcolor{red}{\textbf{  0.75}} &   0.80 &   0.78 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.84}}} & \textcolor{black}{\textbf{  0.83}} &   0.76 \\
-36-molecular promotor... &   0.80 &   0.79 &   0.71 & \textcolor{red}{\textbf{  0.56}} &   0.90 & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.90 \\
-37-molecular splice j... & \textcolor{red}{\textbf{  0.79}} &   0.93 &   0.91 &   0.85 & \textcolor{black}{\textbf{  0.94}} &   0.93 & \underline{\textcolor{blue}{\textbf{  0.96}}} & \textcolor{black}{\textbf{  0.94}} \\
-38-monks1 & \textcolor{red}{\textbf{  0.69}} &   0.80 &   0.71 &   0.78 &   0.75 & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{black}{\textbf{  0.87}} &   0.76 \\ \hline
-39-monks2 &   0.45 & \textcolor{blue}{\textbf{  0.50}} &   0.48 &   0.47 &   0.49 & \textcolor{red}{\textbf{  0.32}} & \textcolor{blue}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.50}} \\
-40-monks3 & \textcolor{red}{\textbf{  0.76}} & \textcolor{blue}{\textbf{  1.00}} &   0.80 &   0.94 &   0.97 & \textcolor{blue}{\textbf{  1.00}} &   0.97 &   0.94 \\
-41-movement libras & \underline{\textcolor{blue}{\textbf{  0.82}}} & \textcolor{red}{\textbf{  0.48}} &   0.73 &   0.68 &   0.54 &   0.76 & \textcolor{black}{\textbf{  0.77}} &   0.63 \\
-42-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} & \textcolor{red}{\textbf{  0.50}} &   0.77 &   0.72 &   0.63 &   0.79 & \textcolor{black}{\textbf{  0.80}} &   0.68 \\
-43-ozone eighthr & \textcolor{black}{\textbf{  0.66}} &   0.63 &   0.58 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.76}}} &   0.57 &   0.65 & \textcolor{red}{\textbf{  0.50}} \\ \hline
-44-ozone onehr & \textcolor{black}{\textbf{  0.60}} &   0.57 &   0.51 &   0.51 & \underline{\textcolor{blue}{\textbf{  0.76}}} & \textcolor{red}{\textbf{  0.50}} &   0.51 & \textcolor{red}{\textbf{  0.50}} \\
-45-page blocks &   0.76 &   0.82 &   0.67 &   0.66 & \textcolor{blue}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.85}} &   0.67 & \textcolor{red}{\textbf{  0.56}} \\
-46-parkinsons & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.79 &   0.76 &   0.79 &   0.79 & \textcolor{black}{\textbf{  0.85}} &   0.78 & \textcolor{red}{\textbf{  0.53}} \\
-47-phoneme & \textcolor{black}{\textbf{  0.87}} &   0.83 & \textcolor{red}{\textbf{  0.74}} &   0.81 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.88}}} &   0.79 &   0.76 \\
-48-pima indians diabe... & \textcolor{red}{\textbf{  0.66}} &   0.71 & \textcolor{blue}{\textbf{  0.73}} &   0.72 & \textcolor{blue}{\textbf{  0.73}} & \textcolor{blue}{\textbf{  0.73}} &   0.72 &   0.72 \\ \hline
-49-planning relax &   0.49 & \textcolor{blue}{\textbf{  0.50}} &   0.48 & \textcolor{red}{\textbf{  0.46}} & \textcolor{blue}{\textbf{  0.50}} &   0.48 & \textcolor{blue}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.50}} \\
-50-qsar biodegradatio... &   0.83 &   0.81 & \textcolor{blue}{\textbf{  0.85}} &   0.84 &   0.80 & \textcolor{blue}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.85}} & \textcolor{red}{\textbf{  0.78}} \\
-51-ringnorm & \textcolor{red}{\textbf{  0.74}} &   0.90 &   0.78 &   0.76 & \textcolor{black}{\textbf{  0.97}} &   0.95 & \underline{\textcolor{blue}{\textbf{  0.98}}} & \textcolor{black}{\textbf{  0.97}} \\
-52-robot failure lp1 &   0.82 &   0.66 &   0.48 & \textcolor{red}{\textbf{  0.42}} &   0.81 & \textcolor{black}{\textbf{  0.84}} &   0.63 & \underline{\textcolor{blue}{\textbf{  0.92}}} \\
-53-robot failure lp4 &   0.81 &   0.72 &   0.51 & \textcolor{red}{\textbf{  0.42}} & \textcolor{black}{\textbf{  0.88}} &   0.84 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.91}}} \\ \hline
-54-robot failure lp5 &   0.60 &   0.55 &   0.43 & \textcolor{red}{\textbf{  0.34}} & \underline{\textcolor{blue}{\textbf{  0.70}}} & \textcolor{black}{\textbf{  0.67}} &   0.57 &   0.65 \\
-55-robot nav sensor r... &   0.98 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.86}} &   0.87 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.96 &   0.98 \\
-56-saheart & \textcolor{red}{\textbf{  0.60}} &   0.61 & \textcolor{black}{\textbf{  0.67}} &   0.66 &   0.65 &   0.62 &   0.64 & \underline{\textcolor{blue}{\textbf{  0.68}}} \\
-57-seeds &   0.92 &   0.92 & \textcolor{blue}{\textbf{  0.95}} & \textcolor{blue}{\textbf{  0.95}} & \textcolor{red}{\textbf{  0.90}} &   0.94 &   0.93 & \textcolor{red}{\textbf{  0.90}} \\
-58-semeion &   0.91 & \textcolor{red}{\textbf{  0.71}} &   0.85 &   0.82 &   0.85 & \textcolor{black}{\textbf{  0.94}} & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.82 \\ \hline
-59-spambase &   0.89 & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} &   0.91 &   0.89 & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.92}} & \textcolor{red}{\textbf{  0.80}} \\
-60-spect heart & \textcolor{red}{\textbf{  0.65}} & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.68}}} &   0.66 & \textcolor{black}{\textbf{  0.67}} & \textcolor{black}{\textbf{  0.67}} & \textcolor{black}{\textbf{  0.67}} & \textcolor{black}{\textbf{  0.67}} \\
-61-spectf heart &   0.58 &   0.61 & \textcolor{black}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.63}} & \underline{\textcolor{blue}{\textbf{  0.73}}} &   0.59 &   0.58 & \textcolor{red}{\textbf{  0.50}} \\
-62-statlog australian... & \textcolor{red}{\textbf{  0.80}} &   0.85 & \textcolor{black}{\textbf{  0.86}} & \textcolor{black}{\textbf{  0.86}} &   0.85 & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.86}} & \textcolor{black}{\textbf{  0.86}} \\
-63-statlog german cre... &   0.61 &   0.63 & \textcolor{blue}{\textbf{  0.68}} & \textcolor{blue}{\textbf{  0.68}} &   0.63 &   0.67 &   0.65 & \textcolor{red}{\textbf{  0.54}} \\ \hline
-64-statlog heart & \textcolor{red}{\textbf{  0.75}} &   0.77 & \textcolor{blue}{\textbf{  0.83}} &   0.81 &   0.82 &   0.81 & \textcolor{blue}{\textbf{  0.83}} & \textcolor{blue}{\textbf{  0.83}} \\
-65-statlog image segm... & \textcolor{black}{\textbf{  0.96}} &   0.95 &   0.91 &   0.92 &   0.90 & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.94 & \textcolor{red}{\textbf{  0.79}} \\
-66-statlog landsat sa... & \textcolor{blue}{\textbf{  0.89}} &   0.82 &   0.85 &   0.86 &   0.82 & \textcolor{blue}{\textbf{  0.89}} &   0.88 & \textcolor{red}{\textbf{  0.80}} \\\end{tabular}\label{tab:balaccClassif1}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 &   0.81 \\
+35-mfeat fourier &   0.80 & \textcolor{red}{\textbf{  0.75}} &   0.80 &   0.78 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.84}}} & \textcolor{black}{\textbf{  0.83}} \\
+36-molecular promotor... &   0.80 &   0.79 &   0.71 & \textcolor{red}{\textbf{  0.56}} &   0.90 & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.93}}} \\
+37-molecular splice j... & \textcolor{red}{\textbf{  0.79}} &   0.93 &   0.91 &   0.85 & \textcolor{black}{\textbf{  0.94}} &   0.93 & \underline{\textcolor{blue}{\textbf{  0.96}}} \\
+38-monks1 & \textcolor{red}{\textbf{  0.69}} &   0.80 &   0.71 &   0.78 &   0.75 & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{black}{\textbf{  0.87}} \\ \hline
+39-monks2 &   0.45 & \textcolor{blue}{\textbf{  0.50}} &   0.48 &   0.47 &   0.49 & \textcolor{red}{\textbf{  0.32}} & \textcolor{blue}{\textbf{  0.50}} \\
+40-monks3 & \textcolor{red}{\textbf{  0.76}} & \textcolor{blue}{\textbf{  1.00}} &   0.80 &   0.94 &   0.97 & \textcolor{blue}{\textbf{  1.00}} &   0.97 \\
+41-movement libras & \underline{\textcolor{blue}{\textbf{  0.82}}} & \textcolor{red}{\textbf{  0.48}} &   0.73 &   0.68 &   0.54 &   0.76 & \textcolor{black}{\textbf{  0.77}} \\
+42-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} & \textcolor{red}{\textbf{  0.50}} &   0.77 &   0.72 &   0.63 &   0.79 & \textcolor{black}{\textbf{  0.80}} \\
+43-mushroom & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.95}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\ \hline
+44-ozone eighthr & \textcolor{black}{\textbf{  0.66}} &   0.63 &   0.58 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.76}}} & \textcolor{red}{\textbf{  0.57}} &   0.65 \\
+45-ozone onehr & \textcolor{black}{\textbf{  0.60}} &   0.57 &   0.51 &   0.51 & \underline{\textcolor{blue}{\textbf{  0.76}}} & \textcolor{red}{\textbf{  0.50}} &   0.51 \\
+46-page blocks &   0.76 &   0.82 &   0.67 & \textcolor{red}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.85}} &   0.67 \\
+47-parkinsons & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.79 & \textcolor{red}{\textbf{  0.76}} &   0.79 &   0.79 & \textcolor{black}{\textbf{  0.85}} &   0.78 \\
+48-phoneme & \textcolor{black}{\textbf{  0.87}} &   0.83 & \textcolor{red}{\textbf{  0.74}} &   0.81 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.88}}} &   0.79 \\ \hline
+49-pima indians diabe... & \textcolor{red}{\textbf{  0.66}} &   0.71 & \textcolor{blue}{\textbf{  0.73}} &   0.72 & \textcolor{blue}{\textbf{  0.73}} & \textcolor{blue}{\textbf{  0.73}} &   0.72 \\
+50-planning relax &   0.49 & \textcolor{blue}{\textbf{  0.50}} &   0.48 & \textcolor{red}{\textbf{  0.46}} & \textcolor{blue}{\textbf{  0.50}} &   0.48 & \textcolor{blue}{\textbf{  0.50}} \\
+51-qsar biodegradatio... &   0.83 &   0.81 & \textcolor{blue}{\textbf{  0.85}} &   0.84 & \textcolor{red}{\textbf{  0.80}} & \textcolor{blue}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.85}} \\
+52-ringnorm & \textcolor{red}{\textbf{  0.74}} &   0.90 &   0.78 &   0.76 & \textcolor{black}{\textbf{  0.97}} &   0.95 & \underline{\textcolor{blue}{\textbf{  0.98}}} \\
+53-robot failure lp1 & \textcolor{black}{\textbf{  0.82}} &   0.66 &   0.48 & \textcolor{red}{\textbf{  0.42}} &   0.81 & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.63 \\ \hline
+54-robot failure lp4 &   0.81 &   0.72 &   0.51 & \textcolor{red}{\textbf{  0.42}} & \underline{\textcolor{blue}{\textbf{  0.88}}} & \textcolor{black}{\textbf{  0.84}} &   0.77 \\
+55-robot failure lp5 &   0.60 &   0.55 &   0.43 & \textcolor{red}{\textbf{  0.34}} & \underline{\textcolor{blue}{\textbf{  0.70}}} & \textcolor{black}{\textbf{  0.67}} &   0.57 \\
+56-robot nav sensor r... &   0.98 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.86}} &   0.87 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.96 \\
+57-saheart & \textcolor{red}{\textbf{  0.60}} &   0.61 & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{black}{\textbf{  0.66}} &   0.65 &   0.62 &   0.64 \\
+58-seeds &   0.92 &   0.92 & \textcolor{blue}{\textbf{  0.95}} & \textcolor{blue}{\textbf{  0.95}} & \textcolor{red}{\textbf{  0.90}} &   0.94 &   0.93 \\ \hline
+59-semeion &   0.91 & \textcolor{red}{\textbf{  0.71}} &   0.85 &   0.82 &   0.85 & \textcolor{black}{\textbf{  0.94}} & \underline{\textcolor{blue}{\textbf{  0.95}}} \\
+60-spambase & \textcolor{red}{\textbf{  0.89}} & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} &   0.91 & \textcolor{red}{\textbf{  0.89}} & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.92}} \\
+61-spect heart & \textcolor{red}{\textbf{  0.65}} & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.68}}} &   0.66 & \textcolor{black}{\textbf{  0.67}} & \textcolor{black}{\textbf{  0.67}} & \textcolor{black}{\textbf{  0.67}} \\
+62-spectf heart & \textcolor{red}{\textbf{  0.58}} &   0.61 & \textcolor{black}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.63}} & \underline{\textcolor{blue}{\textbf{  0.73}}} &   0.59 & \textcolor{red}{\textbf{  0.58}} \\
+63-statlog australian... & \textcolor{red}{\textbf{  0.80}} &   0.85 & \textcolor{black}{\textbf{  0.86}} & \textcolor{black}{\textbf{  0.86}} &   0.85 & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.86}} \\ \hline
+64-statlog german cre... & \textcolor{red}{\textbf{  0.61}} &   0.63 & \textcolor{blue}{\textbf{  0.68}} & \textcolor{blue}{\textbf{  0.68}} &   0.63 &   0.67 &   0.65 \\
+65-statlog heart & \textcolor{red}{\textbf{  0.75}} &   0.77 & \textcolor{blue}{\textbf{  0.83}} &   0.81 &   0.82 &   0.81 & \textcolor{blue}{\textbf{  0.83}} \\
+66-statlog image segm... & \textcolor{black}{\textbf{  0.96}} &   0.95 &   0.91 &   0.92 & \textcolor{red}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.94 \\\end{tabular}\label{tab:balaccClassif1}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 67-statlog vehicle si... &   0.70 &   0.70 & \textcolor{blue}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.78}} &   0.60 &   0.76 &   0.76 & \textcolor{red}{\textbf{  0.46}} \\
-68-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.91}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.99 \\
-69-systhetic control &   0.97 & \textcolor{red}{\textbf{  0.89}} &   0.92 & \textcolor{red}{\textbf{  0.89}} &   0.96 & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.94 \\
-70-teaching assistant... & \textcolor{red}{\textbf{  0.40}} &   0.49 & \underline{\textcolor{blue}{\textbf{  0.53}}} & \textcolor{black}{\textbf{  0.50}} &   0.46 &   0.43 &   0.49 & \textcolor{black}{\textbf{  0.50}} \\
-71-thyroid ann &   0.60 & \underline{\textcolor{blue}{\textbf{  1.00}}} &   0.59 &   0.61 &   0.93 & \textcolor{black}{\textbf{  0.99}} &   0.82 & \textcolor{red}{\textbf{  0.33}} \\ \hline
-72-thyroid hypothyroi... &   0.78 & \textcolor{blue}{\textbf{  0.96}} &   0.82 &   0.84 & \textcolor{blue}{\textbf{  0.96}} &   0.93 &   0.82 & \textcolor{red}{\textbf{  0.76}} \\
-73-thyroid newthyroid & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.86 & \textcolor{red}{\textbf{  0.77}} &   0.85 &   0.89 &   0.91 &   0.92 & \textcolor{black}{\textbf{  0.93}} \\
-74-thyroid sick &   0.43 &   0.43 &   0.43 & \textcolor{red}{\textbf{  0.41}} & \textcolor{blue}{\textbf{  0.49}} &   0.45 & \textcolor{red}{\textbf{  0.41}} & \textcolor{blue}{\textbf{  0.49}} \\
-75-thyroid sick euthy... &   0.77 & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.69 &   0.72 & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} &   0.81 & \textcolor{red}{\textbf{  0.66}} \\
-76-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.78 &   0.95 &   0.95 & \textcolor{red}{\textbf{  0.63}} &   0.94 & \textcolor{black}{\textbf{  0.97}} & \textcolor{red}{\textbf{  0.63}} \\ \hline
-77-turkiye student &   0.28 &   0.33 &   0.31 &   0.27 &   0.32 & \textcolor{black}{\textbf{  0.34}} & \underline{\textcolor{blue}{\textbf{  0.35}}} & \textcolor{red}{\textbf{  0.25}} \\
-78-twonorm &   0.95 & \textcolor{red}{\textbf{  0.84}} & \textcolor{blue}{\textbf{  0.98}} &   0.97 &   0.97 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 \\
-79-user knowledge &   0.67 &   0.78 & \textcolor{red}{\textbf{  0.52}} &   0.63 &   0.70 & \textcolor{black}{\textbf{  0.80}} & \underline{\textcolor{blue}{\textbf{  0.81}}} &   0.76 \\
-80-vertebra column 2c &   0.79 & \textcolor{red}{\textbf{  0.75}} &   0.82 & \textcolor{blue}{\textbf{  0.83}} &   0.78 &   0.82 & \textcolor{blue}{\textbf{  0.83}} &   0.81 \\
-81-vertebra column 3c &   0.73 &   0.75 & \underline{\textcolor{blue}{\textbf{  0.80}}} & \textcolor{black}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.71}} & \textcolor{black}{\textbf{  0.79}} & \textcolor{black}{\textbf{  0.79}} & \textcolor{black}{\textbf{  0.79}} \\ \hline
-82-volcanoes a3 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.30 &   0.28 &   0.27 & \textcolor{red}{\textbf{  0.22}} & \textcolor{black}{\textbf{  0.33}} &   0.28 &   0.29 \\
-83-volcanoes b2 & \textcolor{blue}{\textbf{  0.27}} & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.26 & \textcolor{red}{\textbf{  0.24}} &   0.25 \\
-84-volcanoes d1 & \underline{\textcolor{blue}{\textbf{  0.24}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-85-volcanoes e2 & \underline{\textcolor{blue}{\textbf{  0.25}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-86-voting &   0.91 &   0.93 & \textcolor{black}{\textbf{  0.94}} &   0.93 & \textcolor{red}{\textbf{  0.88}} & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.94}} & \textcolor{black}{\textbf{  0.94}} \\ \hline
-87-waveform v2 & \textcolor{red}{\textbf{  0.73}} &   0.76 &   0.83 &   0.81 &   0.80 & \textcolor{black}{\textbf{  0.85}} & \underline{\textcolor{blue}{\textbf{  0.86}}} &   0.80 \\
-88-wdbc &   0.95 &   0.93 & \textcolor{blue}{\textbf{  0.97}} &   0.96 &   0.94 &   0.96 & \textcolor{blue}{\textbf{  0.97}} & \textcolor{red}{\textbf{  0.92}} \\
-89-wholesale channel & \textcolor{red}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.91}} &   0.88 &   0.88 & \textcolor{blue}{\textbf{  0.91}} & \textcolor{blue}{\textbf{  0.91}} &   0.89 &   0.88 \\
-90-wilt &   0.67 &   0.89 &   0.57 &   0.81 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.91}}} &   0.60 \\
-91-wine &   0.96 & \textcolor{red}{\textbf{  0.90}} & \textcolor{black}{\textbf{  0.98}} &   0.97 & \underline{\textcolor{blue}{\textbf{  0.99}}} & \textcolor{black}{\textbf{  0.98}} & \textcolor{black}{\textbf{  0.98}} & \textcolor{black}{\textbf{  0.98}} \\ \hline
-92-wine quality white... & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.33 &   0.33 &   0.31 & \textcolor{black}{\textbf{  0.36}} & \textcolor{black}{\textbf{  0.36}} &   0.33 & \textcolor{red}{\textbf{  0.20}} \\
-93-yeast 4class & \textcolor{red}{\textbf{  0.57}} &   0.63 & \textcolor{blue}{\textbf{  0.66}} &   0.65 &   0.64 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} &   0.60 \\\end{tabular}\label{tab:balaccClassif2}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM\\ \hline 67-statlog landsat sa... & \textcolor{blue}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.82}} &   0.85 &   0.86 & \textcolor{red}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.89}} &   0.88 \\
+68-statlog vehicle si... &   0.70 &   0.70 & \textcolor{blue}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.78}} & \textcolor{red}{\textbf{  0.60}} &   0.76 &   0.76 \\
+69-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.91}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\
+70-systhetic control &   0.97 & \textcolor{red}{\textbf{  0.89}} &   0.92 & \textcolor{red}{\textbf{  0.89}} &   0.96 & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  0.99}}} \\
+71-teaching assistant... & \textcolor{red}{\textbf{  0.40}} &   0.49 & \underline{\textcolor{blue}{\textbf{  0.53}}} & \textcolor{black}{\textbf{  0.50}} &   0.46 &   0.43 &   0.49 \\ \hline
+72-thyroid ann &   0.60 & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{red}{\textbf{  0.59}} &   0.61 &   0.93 & \textcolor{black}{\textbf{  0.99}} &   0.82 \\
+73-thyroid hypothyroi... & \textcolor{red}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.96}} &   0.82 &   0.84 & \textcolor{blue}{\textbf{  0.96}} &   0.93 &   0.82 \\
+74-thyroid newthyroid & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.86 & \textcolor{red}{\textbf{  0.77}} &   0.85 &   0.89 &   0.91 & \textcolor{black}{\textbf{  0.92}} \\
+75-thyroid sick &   0.43 &   0.43 &   0.43 & \textcolor{red}{\textbf{  0.41}} & \underline{\textcolor{blue}{\textbf{  0.49}}} & \textcolor{black}{\textbf{  0.45}} & \textcolor{red}{\textbf{  0.41}} \\
+76-thyroid sick euthy... &   0.77 & \underline{\textcolor{blue}{\textbf{  0.93}}} & \textcolor{red}{\textbf{  0.69}} &   0.72 & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} &   0.81 \\ \hline
+77-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.78 &   0.95 &   0.95 & \textcolor{red}{\textbf{  0.63}} &   0.94 & \textcolor{black}{\textbf{  0.97}} \\
+78-turkiye student &   0.28 &   0.33 &   0.31 & \textcolor{red}{\textbf{  0.27}} &   0.32 & \textcolor{black}{\textbf{  0.34}} & \underline{\textcolor{blue}{\textbf{  0.35}}} \\
+79-twonorm &   0.95 & \textcolor{red}{\textbf{  0.84}} & \textcolor{blue}{\textbf{  0.98}} &   0.97 &   0.97 &   0.97 & \textcolor{blue}{\textbf{  0.98}} \\
+80-user knowledge &   0.67 &   0.78 & \textcolor{red}{\textbf{  0.52}} &   0.63 &   0.70 & \textcolor{black}{\textbf{  0.80}} & \underline{\textcolor{blue}{\textbf{  0.81}}} \\
+81-vertebra column 2c &   0.79 & \textcolor{red}{\textbf{  0.75}} &   0.82 & \textcolor{blue}{\textbf{  0.83}} &   0.78 &   0.82 & \textcolor{blue}{\textbf{  0.83}} \\ \hline
+82-vertebra column 3c &   0.73 &   0.75 & \underline{\textcolor{blue}{\textbf{  0.80}}} & \textcolor{black}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.71}} & \textcolor{black}{\textbf{  0.79}} & \textcolor{black}{\textbf{  0.79}} \\
+83-volcanoes a3 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.30 &   0.28 &   0.27 & \textcolor{red}{\textbf{  0.22}} & \textcolor{black}{\textbf{  0.33}} &   0.28 \\
+84-volcanoes b2 & \textcolor{blue}{\textbf{  0.27}} & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.26 & \textcolor{red}{\textbf{  0.24}} \\
+85-volcanoes d1 & \underline{\textcolor{blue}{\textbf{  0.24}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} \\
+86-volcanoes e2 & \underline{\textcolor{blue}{\textbf{  0.25}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} \\ \hline
+87-voting &   0.91 &   0.93 & \textcolor{black}{\textbf{  0.94}} &   0.93 & \textcolor{red}{\textbf{  0.88}} & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.94}} \\
+88-waveform v2 & \textcolor{red}{\textbf{  0.73}} &   0.76 &   0.83 &   0.81 &   0.80 & \textcolor{black}{\textbf{  0.85}} & \underline{\textcolor{blue}{\textbf{  0.86}}} \\
+89-wdbc &   0.95 & \textcolor{red}{\textbf{  0.93}} & \textcolor{blue}{\textbf{  0.97}} &   0.96 &   0.94 &   0.96 & \textcolor{blue}{\textbf{  0.97}} \\
+90-wholesale channel & \textcolor{red}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.91}} &   0.88 &   0.88 & \textcolor{blue}{\textbf{  0.91}} & \textcolor{blue}{\textbf{  0.91}} &   0.89 \\
+91-wilt &   0.67 &   0.89 &   0.57 &   0.81 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.91}}} \\ \hline
+92-wine &   0.96 & \textcolor{red}{\textbf{  0.90}} & \textcolor{black}{\textbf{  0.98}} &   0.97 & \underline{\textcolor{blue}{\textbf{  0.99}}} & \textcolor{black}{\textbf{  0.98}} & \textcolor{black}{\textbf{  0.98}} \\
+93-wine quality white... & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.33 &   0.33 & \textcolor{red}{\textbf{  0.31}} & \textcolor{black}{\textbf{  0.36}} & \textcolor{black}{\textbf{  0.36}} &   0.33 \\
+94-yeast 4class & \textcolor{red}{\textbf{  0.57}} &   0.63 & \textcolor{blue}{\textbf{  0.66}} &   0.65 &   0.64 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} \\\end{tabular}\label{tab:balaccClassif2}
 \end{center}
 \end{table}
